crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__print_region_multiple_blocks.snap
---
source: crates/kirin-prettyless/src/tests/edge_cases.rs
expression: buf
---
{
  ^0 {
    constant 1;
    return %0;
  }
  ^1 {
    constant 2;
    return %1;
  }
  ^2 {
    constant 3;
    return %2;
  }
}
