crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__print_ungraph_named.snap
---
source: crates/kirin-prettyless/src/tests/graph_snapshot.rs
expression: buf
---
ungraph ^my_ug(%p0: any) {
  %1 = wire;
  node_a(%p0, %1);
  node_a(%p0, %1);
}
