crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__render_builder_config.snap
---
source: crates/kirin-prettyless/src/tests/impls.rs
expression: output
---
specialize @0 %3 = cfg {
  ^0 {
    %0 = constant 1;
    %1 = constant 2;
    %2 = add %0, %1;
    return %2;
  }
}
