crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__sprint_with_globals.snap
---
source: crates/kirin-prettyless/src/tests/sprint_with_globals.rs
expression: output
---
stage @0 fn @my_function(i64) -> i64;
specialize @0 %1 = cfg {
  ^0 {
    %0 = constant 42;
    return %0;
  }
}
