crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__staged_function_no_params.snap
---
source: crates/kirin-prettyless/src/tests/edge_cases.rs
expression: output
---
stage @0 fn @nullary() -> i64;
specialize @0 %1 = cfg {
  ^0 {
    %0 = constant 0;
    return %0;
  }
}
