crates/kirin-prettyless/src/tests/snapshots/kirin_prettyless__tests__staged_function_unnamed.snap
---
source: crates/kirin-prettyless/src/tests/edge_cases.rs
expression: output
---
stage @X fn @unnamed() -> i64;
specialize @X %1 = cfg {
  ^0 {
    %0 = constant 0;
    return %0;
  }
}
